--- a/src/app/module-list-page/module-list-page.component.html
+++ b/src/app/module-list-page/module-list-page.component.html
@@ -1,5 +1,6 @@
 <div class="container-fluid">
 
+    <!-- Contains the title along with purpose and features -->
     <div class="purpose">
         <h1 style="font-weight:bold;">Welcome to Logique a la Crabe!</h1>
         <h2>Our goal is to teach digital logic in its simplest form.
@@ -10,25 +11,35 @@
         </h2>
     </div>
 
+    <!-- Header for modules -->
     <div class="modules">
         <h1 style="font-weight:bold;">Available Modules</h1>
     </div>
 
+    <!-- Links for modules -->
     <div class="btn-group" style="width:100%">
+        <!-- Binary Numbers Module link -->
         <button type="button" class="btn btn-light">
             <a class="nav-link" routerLink="/binary-numbers">Binary Numbers</a>
         </button>
+
+        <!-- Logic Gates and Truth Table Module link -->
         <button type="button" class="btn btn-light">
             <a class="nav-link" routerLink="/logic-gates">Logic Gates and Truth Tables</a>
         </button>
+
+        <!-- Noise Margins Module link -->
         <button type="button" class="btn btn-light">
             <a class="nav-link" routerLink="/noise-margins">Noise Margins</a>
         </button>
+
+        <!-- NMOS and PMOS Transitors Module link -->
         <button type="button" class="btn btn-light">
             <a class="nav-link" routerLink="/transistors">NMOS and PMOS Transistors</a>
         </button>
     </div>
 
+    <!-- row of logic gates for the aesthetic -->
     <div class="row">
         <img src="assets/logic-gates/AND_gate.svg" alt="and_gate" style="width:150px;height:120px">
         <img src="assets/logic-gates/NOT_gate.svg" alt="not_gate" style="width:150px;height:120px">
@@ -38,10 +49,9 @@
         <img src="assets/logic-gates/NOT_gate.svg" alt="not_gate" style="width:150px;height:120px">
         <img src="assets/logic-gates/Buffer_gate.svg" alt="buffer_gate" style="width:150px;height:120px">
         <img src="assets/logic-gates/OR_gate.svg" alt="or_gate" style="width:150px;height:120px">
-
-
     </div>
 
+    <!-- crab image for aesthetic -->
     <div class="d-flex justify-content-center">
         <img class="crab" src="assets/crab_left_claw_up.png" alt="crab mascot" style="width:400px; height:300px">
     </div>
