--- a/src/app/logic-gates-module/logic-gates/logic-gates-layout/logic-gates-layout.component.css
+++ b/src/app/logic-gates-module/logic-gates/logic-gates-layout/logic-gates-layout.component.css
@@ -11,6 +11,13 @@
     margin-bottom: .5in;
 }
 
+.quiz {
+    margin-top: .5in;
+    margin-left: .5in;
+    margin-right: .5in;
+    margin-bottom: .5in;
+}
+
 .btn-primary {
     background-color: darkslategrey;
     border-color: darkslategrey;
