added table to binary module

--- a/src/app/binary-module/binary-module.component.html
+++ b/src/app/binary-module/binary-module.component.html
@@ -5,12 +5,38 @@
             Binary numbers are just like normal numbers, except they're a little different. Instead of normal numbers going from 0 to 9,
             they go from 0-1! For example, both rows of numbers below go from 0-10, except they're both in different number systems!
         </p>
-        <p class="text-center">
-            Decimal: 0  1   2   3    4    5    6    7     8     9    10
-        </p>
-        <p class="text-center">
-            Binary:  0  1  10  11  100  101  110  111  1000  1001  1010
-        </p>
+        <table class="table d-flex justify-content-center">
+            <tbody>
+              <tr>
+                <th scope="row">Decimal</th>
+                <td>0</td>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+                <td>7</td>
+                <td>8</td>
+                <td>9</td>
+                <td>10</td>
+              </tr>
+              <tr>
+                <th scope="row">Binary</th>
+                <td>0</td>
+                <td>1</td>
+                <td>10</td>
+                <td>11</td>
+                <td>100</td>
+                <td>101</td>
+                <td>110</td>
+                <td>111</td>
+                <td>1000</td>
+                <td>1001</td>
+                <td>1010</td>
+              </tr>
+            </tbody>
+          </table>
         <p>
             Hopefully by that example, you can see the pattern of whats going on. Just like the decimal system, each numbers place
             is the equivelent to the base number to that power. In the decimal system, theres the 1s column, the 10s column, and the 100s column, 
