Minor visual changes

--- a/src/app/transistor-module/transistor-module.component.css
+++ b/src/app/transistor-module/transistor-module.component.css
@@ -33,3 +33,8 @@ img{
     height: 75%;
     width: 75%;
 }
+.btns{
+    background-color: darkslategrey;
+    border-color: darkslategrey;
+    color: white;
+}
